@@ -50,9 +50,9 @@ copyright = u'2013, Christian Winther (Andersson) and Claus Führer'
 # built documents.
 #
 # The short X.Y version.
-version = '3.2.5'
+version = '3.2.6'
 # The full version, including alpha/beta/rc tags.
-release = '3.2.5'
+release = '3.2.6'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -109,7 +109,7 @@ html_theme_path = ['../themes']
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
-html_title = 'Assimulo 3.2.5 documentation'
+html_title = 'Assimulo 3.2.6 documentation'
 
 # A shorter title for the navigation bar.  Default is the same as html_title.
 #html_short_title = None
